[project]
name = "acereserve"
version = "0.1.0"
description = "Ace Reserve Court Booking System"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiosqlite==0.22.1",
    "altair==6.0.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "astroid==4.0.3",
    "attrs==25.4.0",
    "black==25.11.0",
    "blinker==1.9.0",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "coverage==7.13.1",
    "cryptography==46.0.3",
    "dill==0.4.0",
    "fastapi==0.127.1",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "greenlet==3.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==7.0.0",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "librt==0.7.7",
    "markupsafe==3.0.3",
    "mccabe==0.7.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.15.0",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "protobuf==6.33.3",
    "pwdlib==0.3.0",
    "pyarrow==22.0.0",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylint==4.0.4",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "pytokens==0.3.0",
    "pytz==2025.2",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "starlette==0.50.0",
    "streamlit==1.52.2",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tornado==6.5.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uv==0.9.16",
    "uvicorn==0.21.1",
    "watchdog==6.0.0",
]
