[project]
name = "acereserve"
version = "0.1.0"
description = "Ace Reserve Court Booking System"
readme = "README.md"
requires-python = ">=3.11" 

dependencies = [
    "fastapi",
    "uvicorn[standard]", 
    "python-multipart",
    "sqlmodel",
    "aiosqlite",         
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyjwt",    
    "pwdlib[argon2]",    
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "pytest-cov",
    "coverage",
    "httpx",             
    "black",
    "pylint",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/config.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
